# ParaView3-enhancements-old

./: .braids  .gitignore  .gitmodules  vtkPQConfig.h.in  vtkPVConfig.h.in
Applications/AdaptiveParaView/: ProcessModuleGUIHelper.cxx  ProcessModuleGUIHelper.h  pqAdaptiveMainWindowCore.h  pqCustomDisplayPolicy.h  pqCustomViewModules.h
Applications/Client/: CMakeLists.txt  CompleteBundle.cmake.in  CreateBundle.sh.in  CreateDmgIcon.sh  CreateDragNDropBundle.sh.in  DmgLicense_v1.2.txt  DmgResource.r.in  MacOSXBundleInfo.plist.in  ProcessModuleGUIHelper.cxx  ProcessModuleGUIHelper.h  main.cxx  pqClient.cxx  pqClientProcessModuleGUIHelper.cxx  pqClientProcessModuleGUIHelper.h  pvDiskIcon.icns  pvDmgIcon.icns  pvDmgIcon.pov
Applications/DobranoViz/: ProcessModuleGUIHelper.cxx  ProcessModuleGUIHelper.h  main.cxx
Applications/OverView/: AboutDialog.cxx  AboutDialog.h  ApplicationOptionsDialog.cxx  ApplicationOptionsDialog.h  Config.h.in  DisplayPolicy.h  GlobalGraphViewOptions.h  MainWindow.cxx  MainWindow.h  ProcessModuleGUIHelper.cxx  ProcessModuleGUIHelper.h  main.cxx
Applications/StreamingParaView/: ProcessModuleGUIHelper.cxx  ProcessModuleGUIHelper.h  main.cxx  pqCustomDisplayPolicy.h  pqCustomViewModules.h  pqStreamingMainWindowCore.h
Applications/Widgets/: ProcessModuleGUIHelper.cxx  ProcessModuleGUIHelper.h
CMake/: ParaViewCommon.cmake
Common/DocumentIcons/: OpenFOAM.icns  vtk.icns
Common/KWCommon/: ProcessXML.cxx  kw-forward.c.in  vtkAVIWriter.cxx  vtkAbstractIterator.h  vtkAbstractIterator.txx  vtkAbstractList.h  vtkAbstractList.txx  vtkAbstractMap.h  vtkAbstractMap.txx  vtkAbstractMapper.cxx  vtkAbstractMapper.h  vtkArrayMap.h  vtkArrayMap.txx  vtkArrayMapIterator.h  vtkArrayMapIterator.txx  vtkContainer.cxx  vtkContainer.h  vtkCornerAnnotation.cxx  vtkCornerAnnotation.h  vtkHashMap.h  vtkHashMap.txx  vtkHashMapIterator.h  vtkHashMapIterator.txx  vtkKWArguments.cxx  vtkKWArguments.h  vtkKWDirectoryUtilities.cxx  vtkKWDirectoryUtilities.h  vtkKWEvent.cxx  vtkKWEvent.h  vtkKWEventMap.cxx  vtkKWEventMap.h  vtkKWGenericMovieWriter.cxx  vtkKWHashTable.cxx  vtkKWHashTable.h  vtkKWHashTableIterator.cxx  vtkKWHashTableIterator.h  vtkKWHistogram.cxx  vtkKWIcon.cxx  vtkKWIcon.h  vtkKWMath.cxx  (+47 more)
GUI/Widgets/: QtWidgetsExport.h  pqCollapsedGroup.cxx  pqCollapsedGroup.h  pqColorChooserButton.cxx  pqColorChooserButton.h  pqConnect.cxx  pqConnect.h  pqConsoleWidget.cxx  pqConsoleWidget.h  pqDelimitedTextParser.h  pqFileDialog.cxx  pqFileDialog.h  pqFileDialogFilter.cxx  pqFileDialogFilter.h  pqFileDialogModel.cxx  pqFileDialogModel.h  pqFlatTreeView.cxx  pqFlatTreeView.h  pqListWidgetItemObject.cxx  pqListWidgetItemObject.h  pqLocalFileDialogModel.cxx  pqLocalFileDialogModel.h  pqPlayControlsWidget.cxx  pqPlayControlsWidget.h  pqProgressBar.cxx  pqProgressBar.h  pqSectionVisibilityContextMenu.cxx  pqSectionVisibilityContextMenu.h  pqSetData.cxx  pqSetData.h  pqSetName.cxx  pqSetName.h  pqSignalAdaptors.cxx  pqSignalAdaptors.h  pqTreeWidgetItemObject.cxx  pqTreeWidgetItemObject.h  pqViewMenu.h  pqWaitCursor.h
Plugins/: CMakeLists.txt
Plugins/Manta/: vtkManta.h  (+30 more)
Qt/: CMakeLists.txt
VTK/: CMakeLists.txt  Copyright.txt  vtkConfigure.h.in  vtkIncludeDirectories.cmake  vtkToolkits.h.in
VTK/Utilities/vtkffmpeg/: CMakeLists.txt  DetectSystemFeatures.cmake  config.h.in  ffmpegDllConfig.h.in
VTK/Utilities/vtkffmpeg/libavcodec/: avcodec.h  files.cmake
VTK/Utilities/vtkffmpeg/libavcodec/ppc/: dsputil_altivec.c  dsputil_ppc.c  fdct_altivec.c  fft_altivec.c  float_altivec.c  gmc_altivec.c  h264_altivec.c  idct_altivec.c  mpegvideo_altivec.c  vc1dsp_altivec.c
VTK/Utilities/vtkffmpeg/libavformat/: avformat.h  avio.h  files.cmake
VTK/Utilities/vtkffmpeg/libavutil/: common.h  files.cmake
VTK/Utilities/vtkoggtheora/: CMakeLists.txt  README.Kitware.txt  vtk_oggtheora_mangle.h  vtkoggtheora.vscript
VTK/Utilities/vtkoggtheora/libogg-1.1.4/include/ogg/: ogg.h  os_types.h
VTK/Utilities/vtkoggtheora/libogg-1.1.4/src/: bitwise.c  framing.c
VTK/Utilities/vtkoggtheora/libtheora-1.1.1/include/theora/: codec.h  theora.h  theoradec.h  theoraenc.h
VTK/Utilities/vtkoggtheora/libtheora-1.1.1/lib/: apiwrapper.h  bitpack.h  decapiwrapper.c  decint.h  decode.c  dequant.c  encint.h  huffdec.c  huffman.h  internal.h  quant.c  quant.h
VTK/Utilities/vtkoggtheora/libtheora-1.1alpha2/examples/: encoder_example.c
VTK/Utilities/vtkoggtheora/libtheora-1.1alpha2/include/theora/: codec.h  theora.h  theoradec.h  theoraenc.h
VTK/Utilities/vtkoggtheora/libtheora-1.1alpha2/lib/: cpu.c  cpu.h  internal.h
VTK/Utilities/vtkoggtheora/libtheora-1.1alpha2/lib/dec/: apiwrapper.c  apiwrapper.h  bitpack.h  dct.h  decint.h  dequant.h  fragment.c  huffdec.h  huffman.h  idct.c  info.c  internal.c  ocintrin.h  quant.h
VTK/Utilities/vtkoggtheora/libtheora-1.1alpha2/lib/dec/x86/: mmxfrag.c  mmxidct.c  x86int.h
VTK/Utilities/vtkoggtheora/libtheora-1.1alpha2/lib/dec/x86_vc/: mmxidct.c
VTK/Utilities/vtkoggtheora/libtheora-1.1alpha2/lib/enc/: codec_internal.h  dct.c  dct_decode.c  dct_encode.c  encapiwrapper.c  encfrag.c  encode.c  encoder_huffman.h  encoder_lookup.h  encoder_quant.c  encoder_toplevel.c  frarray.c  frinit.c  huffenc.c  quant_lookup.h  toplevel_lookup.h
VTK/Utilities/vtkoggtheora/libtheora-1.1alpha2/lib/enc/x86_32_vs/: fdct_mmx.c
VTK/Utilities/vtkoggtheora/libtheora-1.1beta2/examples/: encoder_example.c
VTK/Utilities/vtkoggtheora/libtheora-1.1beta2/include/theora/: codec.h  theora.h  theoradec.h  theoraenc.h
VTK/Utilities/vtkoggtheora/libtheora-1.1beta2/lib/: apiwrapper.c  apiwrapper.h  bitpack.c  bitpack.h  dct.h  decapiwrapper.c  decinfo.c  decint.h  decode.c  dequant.c  dequant.h  encfrag.c  encint.h  encode.c  enquant.c  fdct.c  fragment.c  huffdec.c  huffdec.h  huffman.h  idct.c  info.c  internal.c  internal.h  ocintrin.h  quant.c  quant.h  rate.c  state.c  tokenize.c
VTK/Utilities/vtkoggtheora/libtheora-1.1beta2/lib/x86/: mmxfrag.c  mmxidct.c  mmxstate.c  x86int.h  x86state.c
VTK/Utilities/vtkoggtheora/libtheora-1.1beta2/lib/x86_vc/: mmxfrag.c  mmxidct.c  mmxstate.c  x86int.h
(+8654 files in other folders)
